# MeBike

./: .gitignore  BNO055Main.c  CMakeLists.txt  LICENSE  MeBike.atsln  MeBike.cproj  README.md  UART.c  dht11.c  dht11.h  main.c  main.h  pom.xml  pulsesensor.c  pulsesensor.h  serial.c
BNO055/: Stream.cpp  Stream.h  bno055.c  bno055.h  bno055_main.c  bno055_main.h  bno055_support.c  bno055_support.h
I2C/: i2cExample.c
Java/: pom.xml
Java/src/main/java/de/hhn/mebike/: MebikeApplication.java
Java/src/main/java/de/hhn/mebike/controller/: ClientController.java  TourController.java  TourPointController.java  TourSummaryController.java
Java/src/main/java/de/hhn/mebike/dto/: TourSummaryDTO.java
Java/src/main/java/de/hhn/mebike/model/: Client.java  GPSPoint.java  Tour.java  TourPoint.java
Java/src/main/java/de/hhn/mebike/repository/: ClientRepository.java  TourPointRepository.java  TourRepository.java
Java/src/main/java/de/hhn/mebike/service/: ClientService.java  TourPointService.java  TourService.java  TourSummaryService.java
Java/src/main/java/de/hhn/mebike/tour/: FlattenedTourEntry.java  TourSummary.java
Java/src/main/java/de/hhn/mebike/util/: HaversineAlgorithm.java
Java/src/main/resources/: application.properties
Java/src/test/java/de/hhn/mebike/: MebikeApplicationTests.java
MeBikeApp/: settings.gradle
MeBikeApp/app/: build.gradle
MeBikeApp/app/src/androidTest/java/de/hhn/mebike/mebikeapp/: ExampleInstrumentedTest.java
MeBikeApp/app/src/main/: AndroidManifest.xml
MeBikeApp/app/src/main/java/de/hhn/mebike/mebikeapp/: ArduinoData.java  CommunicateActivity.java  CommunicateViewModel.java  DataChangedListener.java  MainActivity.java  MainActivityViewModel.java  TourOverview.java
MeBikeApp/app/src/main/java/de/hhn/mebike/mebikeapp/util/: Haversine.java  NetworkManager.java  NetworkResponse.java
MeBikeApp/app/src/main/res/layout/: activity_communicate.xml  activity_main.xml  activity_tour_overview.xml  main_display.xml
MeBikeApp/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
MeBikeApp/app/src/test/java/de/hhn/mebike/mebikeapp/: ExampleUnitTest.java
MeBikeApp/gradle/wrapper/: gradle-wrapper.properties
adc/: adc.c  adc.h
bluetooth/: bluetooth.c  bluetooth.h
dht11/: dht11.c  dht11.h
gps/: gps_main.c  gps_main.h
hall/: hall_main.c  hall_main.h
hall/adcHall/: adcHall.c  adcHall.h
i2cmaster/: i2cmaster.S  test_i2cmaster.c  twimaster.c
pulsesensor/: pulsesensor.c  pulsesensor.h
uart/: serial.c  serial.h  softuart.c  softuart.h
util/: util.c  util.h
util/Interrupt/: timer.c  timer.h
